[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/Projectiles/Proj-42-G-Launcher.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Projectiles/Proj-42-G_Launcher.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Explosions/Ex-10-Directional-Basic.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/FX/FX-42-Grenade_Trail.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.0
height = 8.0

[node name="Proj-42-G_Launcher" type="RigidBody2D" groups=[
"projectile",
]]
collision_layer = 2147484160
collision_mask = 134922
mass = 5.0
gravity_scale = 10.0
contacts_reported = 8
contact_monitor = true
script = ExtResource( 2 )
boom = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="CPUParticles2D" parent="." instance=ExtResource( 4 )]
[connection signal="body_entered" from="." to="." method="_on_Proj42G_Launcher_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_Proj42G_Launcher_body_shape_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
